<resources>
    <string name="app_name">Agenda Online</string>

    <!--MAIN ACTIVITY -->
    <string name="Btn_Login">Login</string>
    <string name="Btn_Registro">Registro</string>

    <!-- ACTIVIDAD REGISTRO -->
    <string name="CrearCuentaTxt">Crear Cuenta</string>
    <string name="NombreEt">Nombre</string>
    <string name="CorreoEt">Correo electrónico</string>
    <string name="ContraseñaEt">Contraseña</string>
    <string name="ConfirmarContraseñaEt">Confirmar contraseña</string>
    <string name="RegistrarUsusario">Registrar ususario</string>
    <string name="TengoUnaCuenta">Tengo una cuenta</string>

    <!-- ACTIVIDAD REGISTRO -->
    <string name="CerrarSesion">Salir</string>
    <string name="BorrarCuenta">Borrar Cuenta</string>

    <!-- ACTIVIDAD LOGIN -->
    <string name="IniciarSesionTXT">Iniciar Sesión</string>
    <string name="CorreoLogin">Correo electrónico</string>
    <string name="PassLogin">Contraseña</string>
    <string name="Btn_Logeo">Ingresar</string>
    <string name="UsuarioNuevo">No tengo cuenta. Registrarme.</string>

    <!-- MENU PRINCIPAL -->
    <string name="BienvenidoPrincipal">Bienvenido</string>
    <string name="NombresPrincipal">--</string>
    <string name="CorreoPrincipal">--</string>
</resources>