<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimaryLight"
            app:cardUseCompatPadding="true"
            android:padding="0.2dp"
            app:cardCornerRadius="5dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/worksans"
                    android:text="@string/BienvenidoPrincipal"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <ProgressBar
                    android:id="@+id/ProgressBarDatos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/NombresPrincipal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/worksans"
                    android:text="@string/NombresPrincipal"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/CorreoPrincipal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/worksans"
                    android:text="@string/CorreoPrincipal"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:visibility="gone" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/CerrarSesion"
            android:text="@string/CerrarSesion"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/BorrarCuenta"
            android:visibility="gone"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/BorrarCuenta" />



    </androidx.appcompat.widget.LinearLayoutCompat>



</ScrollView>