<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans"
            android:gravity="center"
            android:text="@string/IniciarSesionTXT"
            android:textSize="25sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="saludo.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/CorreoLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="10dp"
                android:fontFamily="@font/worksans"
                android:hint="@string/CorreoLogin"
                android:inputType="textEmailAddress"
                android:padding="20dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/PassLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:fontFamily="@font/worksans"
                android:hint="@string/PassLogin"
                android:inputType="textPassword"
                android:padding="20dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Btn_Logeo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/worksans"
            android:text="@string/Btn_Logeo"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/UsuarioNuevo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/worksans"
            android:text="@string/UsuarioNuevo"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>